--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -218,6 +218,7 @@ student.updated.message={0}名称为{1}更新成功
 student.updated.failure.message={0}名称为{1}更新失败
 student.created.label=填报日期
 student.number.not.unique.message=此身份证号码已被注册
+student.admissionTicketNumber.not.unique.message=准考证号已被注册
 #teacher
 teacher.label=老师
 teacher.taskNumber.label=任务数
@@ -241,6 +242,7 @@ plan.code.label=编号
 plan.status.label=状态
 plan.description.label=说明
 plan.student.count.label=专业学生数
+plan.score.label=高考分数线
 
 studentPlans.label=专业
 
@@ -285,6 +287,22 @@ download.file.label=联系信息
 download.date.label=日期
 download.record.label=下载记录
 download.record.date.label=下载日期
+
+#预科生
+preppy.label=预科生
+preppy.name.label=姓名
+preppy.gender.label=性别
+preppy.number.label=身份证号
+preppy.collegeType.label=高考类型
+preppy.status.label=中学情况
+preppy.middlePlan.label=原就读专业
+preppy.plan.label=大学拟就读专业
+preppy.family.label=户籍所在地
+preppy.phone.label=手机
+preppy.qq.label=QQ
+preppy.tel.label=家长电话
+preppy.teacher.label=推荐人
+
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
