学生的报到，录取

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -220,6 +220,9 @@ student.created.label=填报日期
 student.number.not.unique.message=此身份证号码已被注册
 student.admissionTicketNumber.not.unique.message=准考证号已被注册
 student.create.new.label=创建新生
+student.admission.label=录取
+student.registration.label=报到
+
 #teacher
 teacher.label=老师
 teacher.taskNumber.label=任务数
