--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -171,13 +171,14 @@ user.name.label=姓名
 
 #student
 student.label=学生
+student.reg.label=学生注册
 student.name.label=姓名
 student.username.label=用户名
 student.password.label=密码
 student.gender.label=性别
 student.code.label=考生号
 student.admissionTicketNumber.label=准考证号
-student.admissionTicketNumber.pic.label=准考证照片
+student.admissionTicketNumber.pic.label=凭证
 student.birthday.label=出生年月
 student.number.label=身份证号
 student.address.label=家庭地址
@@ -209,7 +210,7 @@ student.review.description.label=备注
 student.year.label=年度
 student.recommend.teacher.label=推荐人
 student.payment.docPic.message=上传预缴费凭证图片
-student.admissionTicketNumber.pic.message=上传准考证照片
+student.admissionTicketNumber.pic.message=财处务缴费盖章的协议或银行汇款单或准考证照片
 student.recommend.teacher.message=可不填
 student.select.zd.message=请选择导出学生的字段
 student.updated.audit.message={0}名称为{1}已经审核
@@ -293,8 +294,8 @@ download.record.label=下载记录
 download.record.date.label=下载日期
 
 #预科生
-preppy.create.label=创建预科生
-preppy.label=预科生
+preppy.create.label=创建旁听生
+preppy.label=旁听生
 preppy.name.label=姓名
 preppy.gender.label=性别
 preppy.number.label=身份证号
