--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -309,6 +309,11 @@ preppy.qq.label=QQ
 preppy.tel.label=家长电话
 preppy.teacher.label=推荐人
 
+#Comparison
+comparison.label=数据对比
+comparison.a.label=A
+comparison.b.label=B
+comparison.button.label=开始对比
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
