--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -228,7 +228,7 @@ student.registration.label=报到
 teacher.label=老师
 teacher.taskNumber.label=任务数
 
-finance.label=财务
+finance.label=审核
 admin.label=管理员
 
 #Department
@@ -299,22 +299,66 @@ preppy.label=旁听生
 preppy.name.label=姓名
 preppy.gender.label=性别
 preppy.number.label=身份证号
-preppy.collegeType.label=高考类型
+preppy.type.label=考生类别
 preppy.status.label=中学情况
 preppy.middlePlan.label=原就读专业
-preppy.plan.label=大学拟就读专业
+preppy.plan.label=申请就读专业
 preppy.family.label=户籍所在地
-preppy.phone.label=手机
+preppy.phone.label=学生手机
 preppy.qq.label=QQ
-preppy.tel.label=家长电话
+preppy.parentPhone.label=家长手机
 preppy.teacher.label=推荐人
-
+preppy.reviewStatus.label=审核
+preppy.reviewDate.label=审核日期
+preppy.reviewPerson.label=审核人
+preppy.academicYear.label=学业水平测试
+preppy.skill.label=技术
+preppy.birthday.label=出生日期
+preppy.age.label=年龄
+preppy.studentDistrict.label=学籍所在地
+preppy.academicScore.label=学业水平测试成绩
+preppy.schoolType.label=学校类别
+preppy.deposit.label=缴纳保证金
+preppy.address.label=家庭住址
+preppy.studentCateories.label=考生类型
+preppy.xy.label=协议
+preppy.school.label=学校
+#preppyPlan
+preppyPlan.label=旁听生科目组
+preppyPlan.name.label=名称
+preppyPlan.status.label=状态
 #Comparison
 comparison.label=数据对比
 comparison.a.label=A
 comparison.b.label=B
 comparison.button.label=开始对比
 
+#Medium 中职生
+medium.create.label=创建中职生
+medium.label=中职生
+medium.name.label=姓名
+medium.code.label=考生号
+medium.gender.label=性别
+medium.number.label=身份证号
+medium.district.label=户籍所在地
+medium.studentDistrict.label=学籍所在地
+medium.mediumPlan.label=中专科目组
+medium.plan.label=大学拟就读专业
+medium.teacher.label=推荐人
+medium.description.label=备注
+medium.voucherPath.label=凭证
+medium.admission.label=录取
+medium.registration.label=报到
+medium.reviewStatus.label=审核
+medium.reviewPerson.label=审核人
+medium.reviewDate.label=审核日期
+
+#MediumPlan 中专科目组
+mediumPlan.label=中专科目组
+mediumPlan.name.label=名称
+mediumPlan.code.label=代码
+mediumPlan.status.label=状态
+mediumPlan.orderValue.label=排序
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
