--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -88,6 +88,7 @@ default.button.delete.label=删除
 default.button.close.label=关闭
 default.button.cancel.label=取消
 default.button.reset.label=重置
+default.button.print.label=打印
 default.button.delete.confirm.message=确认要删除么?
 default.operator.label=操作
 default.all.label=全部
@@ -359,6 +360,10 @@ mediumPlan.name.label=名称
 mediumPlan.code.label=代码
 mediumPlan.status.label=状态
 mediumPlan.orderValue.label=排序
+#Material
+material.label=提交材料
+material.content.label=内容
+material.reviewStatus.label=适用范围
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
