--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -89,6 +89,7 @@ default.button.close.label=关闭
 default.button.cancel.label=取消
 default.button.reset.label=重置
 default.button.print.label=打印
+default.button.preview.label=预览
 default.button.delete.confirm.message=确认要删除么?
 default.operator.label=操作
 default.all.label=全部
@@ -364,6 +365,30 @@ mediumPlan.orderValue.label=排序
 material.label=提交材料
 material.content.label=内容
 material.reviewStatus.label=适用范围
+###
+workPlan.label=工作汇报及计划
+workPlan.name.label=包干人
+workPlan.area.label=包干区
+workPlan.num.label=已签约数
+workPlan.date.label=本工作周期
+workPlan.middleSchools.label=联系了哪些中学
+workPlan.tel.label=联系人姓名、职务、联系方式
+workPlan.result.label=取得了哪些成果
+workPlan.opinion.label=对方提出哪些意见和建议
+workPlan.materialObject.label=材料发放的对象
+workPlan.materialNum.label=对象总人数
+workPlan.materialTel.label=散发人的姓名、联系电话
+workPlan.questions.label=发材料过程中发现的问题
+workPlan.hasOpinion.label=有无意见
+workPlan.pic.label=发放过程证明照片
+workPlan.carFare.label=车费（车费、油费、过路费）
+workPlan.cityCarFare.label=市内交通费
+workPlan.accommodation.label=住宿费
+workPlan.entertainment.label=招待费
+workPlan.amount.label=人均金额
+workPlan.attendSeminar.label=有无参加咨询会
+workPlan.workPlan.label=下个周期工作计划
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
