--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,6 +19,8 @@ default.paginate.prev=\u4E0A\u9875
 default.paginate.total=共{0}条
 default.boolean.true=是
 default.boolean.false=否
+default.yes.label=有
+default.no.label=无
 default.date.format=yyyy-MM-dd HH:mm:ss z
 default.number.format=0
 default.authenticated.fully=登录用户
@@ -172,7 +174,7 @@ user.name.label=姓名
 
 
 #student
-student.label=学生
+student.label=普高生
 student.reg.label=学生注册
 student.name.label=姓名
 student.username.label=用户名
@@ -222,7 +224,7 @@ student.updated.failure.message={0}名称为{1}更新失败
 student.created.label=填报日期
 student.number.not.unique.message=此身份证号码已被注册
 student.admissionTicketNumber.not.unique.message=准考证号已被注册
-student.create.new.label=创建新生
+student.create.new.label=创建普高生
 student.admission.label=录取
 student.registration.label=报到
 
@@ -325,6 +327,15 @@ preppy.address.label=家庭住址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
 preppy.school.label=学校
+
+preppy.hkbPath.label=户口本首页
+preppy.hkbksyPath.label=户口本考生页
+preppy.cardPhotoPath.label=身份证照片
+preppy.byzsPath.label=高中（中职）毕业证书
+preppy.xjzmPath.label=学籍证明
+preppy.remark.label=备注
+
+
 #preppyPlan
 preppyPlan.label=旁听生科目组
 preppyPlan.name.label=名称
@@ -388,6 +399,8 @@ workPlan.entertainment.label=招待费
 workPlan.amount.label=人均金额
 workPlan.attendSeminar.label=有无参加咨询会
 workPlan.workPlan.label=下个周期工作计划
+workPlan.dateCreated.label=填表日期
+
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
