旁听生管理修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -284,6 +284,15 @@ studentType.label=考生类型
 studentType.name.label=名称
 studentType.code.label=编号
 
+studentType.4.label=中职在校生
+studentType.5.label=普通高中在校生
+studentType.6.label=中职毕业生未曾被普通高校录取
+studentType.7.label=中职毕业生已经被普通高校录取
+studentType.8.label=普通高中毕业生未曾被普通高校录取
+studentType.9.label=普通高中毕业生已经被普通高校录取
+studentType.10.label=曾经在江苏高中或中职读书
+studentType.11.label=一直在其他省份高中或中职读书
+
 #download
 download.label=下载联系信息
 download.name.label=点击下载联系信息excel文档
@@ -307,7 +316,7 @@ preppy.type.label=考生类别
 preppy.status.label=中学情况
 preppy.middlePlan.label=原就读专业
 preppy.plan.label=申请就读专业
-preppy.family.label=户籍所在地
+preppy.family.label=户籍地
 preppy.phone.label=学生手机
 preppy.qq.label=QQ
 preppy.parentPhone.label=家长手机
@@ -323,7 +332,7 @@ preppy.studentDistrict.label=学籍所在地
 preppy.academicScore.label=学业水平测试成绩
 preppy.schoolType.label=学校类别
 preppy.deposit.label=缴纳保证金
-preppy.address.label=家庭住址
+preppy.address.label=详细住址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
 preppy.school.label=学校
@@ -353,7 +362,7 @@ medium.name.label=姓名
 medium.code.label=考生号
 medium.gender.label=性别
 medium.number.label=身份证号
-medium.district.label=户籍所在地
+medium.district.label=户籍地区
 medium.studentDistrict.label=学籍所在地
 medium.mediumPlan.label=中专科目组
 medium.plan.label=大学拟就读专业
