旁听生管理修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -113,7 +113,7 @@ default.keyword.label=关键字
 
 default.select.zd.message=请选择
 
-default.orderValue.label=排序值
+ default.orderValue.label=排序值
 
 #account
 operator.changepassword.label=修改密码
@@ -319,6 +319,7 @@ preppy.plan.label=申请就读专业
 preppy.family.label=户籍地
 preppy.phone.label=学生手机
 preppy.qq.label=QQ
+preppy.resume.label=简历
 preppy.parentPhone.label=家长手机
 preppy.teacher.label=推荐人
 preppy.reviewStatus.label=审核
