旁听生资料修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -127,6 +127,7 @@ operator.passwordnotequal.message=新密码和确认密码不相同
 operator.passwordincorrect.message=密码错误
 operator.passwordfailed.message=密码修改失败
 operator.passwordsuccess.message=密码修改成功
+operator.password.len.error.message=密码长度在6-16
 #reg
 reg.label=注册
 reg.validate.code.label=验证码
