旁听生资料修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -310,6 +310,8 @@ download.record.date.label=下载日期
 #预科生
 preppy.create.label=创建旁听生
 preppy.label=旁听生
+preppy.code.label=编号
+preppy.csCode.label=审核编号
 preppy.name.label=姓名
 preppy.gender.label=性别
 preppy.number.label=身份证号
@@ -338,6 +340,7 @@ preppy.address.label=详细住址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
 preppy.school.label=学校
+preppy.town.label=乡镇
 
 preppy.hkbPath.label=户口本首页
 preppy.hkbksyPath.label=户口本考生页
