旁听生资料修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -340,7 +340,7 @@ preppy.address.label=详细住址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
 preppy.school.label=学校
-preppy.town.label=乡镇
+preppy.town.label=乡镇(街道)
 
 preppy.hkbPath.label=户口本首页
 preppy.hkbksyPath.label=户口本考生页
