旁听生资料修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -323,6 +323,8 @@ preppy.family.label=户籍地
 preppy.phone.label=学生手机
 preppy.qq.label=QQ
 preppy.resume.label=简历
+preppy.resume.junior.label=初中
+preppy.resume.high.label=高中
 preppy.parentPhone.label=家长手机
 preppy.teacher.label=推荐人
 preppy.reviewStatus.label=审核
