--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -328,6 +328,7 @@ preppy.resume.high.label=高中
 preppy.parentPhone.label=家长手机
 preppy.teacher.label=推荐人
 preppy.reviewStatus.label=审核
+preppy.collegeSignUp.label=高考报名
 preppy.reviewDate.label=审核日期
 preppy.reviewPerson.label=审核人
 preppy.academicYear.label=学业水平测试
