旁听生资料修改2

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -92,6 +92,7 @@ default.button.cancel.label=取消
 default.button.reset.label=重置
 default.button.print.label=打印
 default.button.preview.label=预览
+default.button.back.label=返回
 default.button.delete.confirm.message=确认要删除么?
 default.operator.label=操作
 default.all.label=全部
@@ -351,6 +352,8 @@ preppy.cardPhotoPath.label=身份证照片
 preppy.byzsPath.label=高中（中职）毕业证书
 preppy.xjzmPath.label=学籍证明
 preppy.remark.label=备注
+preppy.counselor.label=辅导员
+preppy.counselorPhone.label=辅导员电话
 
 
 #preppyPlan
