移动端的学生添加

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -42,6 +42,9 @@ springSecurity.errors.login.fail=很抱歉，找不到用户名和密码。
 
 # Login Page
 springSecurity.login.title=登录
+
+springSecurity.student.login.title=考生登录
+springSecurity.teacher.login.title=老师登录
 springSecurity.login.header=请登录
 springSecurity.login.button=登录
 springSecurity.login.username.label=用户名
@@ -79,6 +82,7 @@ default.manager.label={0}管理
 default.showtips.label=提示
 default.count.label={0}数量
 
+default.button.confirm.label=确定
 default.button.search.label=搜索
 default.button.export.label=导出
 default.button.import.label=导入
@@ -421,6 +425,17 @@ workPlan.attendSeminar.label=有无参加咨询会
 workPlan.workPlan.label=下个周期工作计划
 workPlan.dateCreated.label=填表日期
 
+#mobile
+
+student.select.title=选择身份
+student.create.stu.title=创建学生
+student.create.high.title=创建高中生信息
+student.mobile.create.preppy.title=创建旁听生信息
+student.mobile.create.medium.title=创建中专生信息
+student.mobile.high.show.title=高中生信息创建成功
+student.mobile.preppy.show.title=旁听生信息创建成功
+student.mobile.medium.show.title=中专生信息创建成功
+student.mobile.preppy.stu.title=考生创建信息
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
