移动端的学生添加

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -428,6 +428,7 @@ workPlan.dateCreated.label=填表日期
 #mobile
 
 student.select.title=选择身份
+student.create.stu.type.title=选择类别
 student.create.stu.title=创建学生
 student.create.high.title=创建高中生信息
 student.mobile.create.preppy.title=创建旁听生信息
