移动端的学生添加

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -188,7 +188,6 @@ student.password.label=密码
 student.gender.label=性别
 student.code.label=考生号
 student.admissionTicketNumber.label=准考证号
-student.admissionTicketNumber.pic.label=凭证
 student.birthday.label=出生年月
 student.number.label=身份证号
 student.address.label=家庭地址
@@ -210,7 +209,7 @@ student.payment.name.label=预缴费人
 student.payment.account.label=预缴费帐号
 student.payment.amount.label=预缴费金额
 student.payment.date.label=预缴费日期
-student.payment.docPic.label=预缴费凭证
+student.payment.docPic.label=预缴费凭证图片
 student.payment.docDate.label=预缴费凭证日期
 student.review.label=审核
 student.review.user.label=审核人
@@ -219,8 +218,11 @@ student.review.status.label=审核状态
 student.review.description.label=备注
 student.year.label=年度
 student.recommend.teacher.label=推荐人
-student.payment.docPic.message=上传预缴费凭证图片
-student.admissionTicketNumber.pic.message=财处务缴费盖章的协议或银行汇款单或准考证照片
+student.payment.docPic.message=预缴费凭证图片
+student.admissionTicketNumber.pic.label=准考证照片
+student.cardNo.pic.label=身份证图片
+student.agreement.pic.label=协议照片
+
 student.recommend.teacher.message=可不填
 student.select.zd.message=请选择导出学生的字段
 student.updated.audit.message={0}名称为{1}已经审核
@@ -344,6 +346,7 @@ preppy.studentDistrict.label=学籍所在地
 preppy.academicScore.label=学业水平测试成绩
 preppy.schoolType.label=学校类别
 preppy.deposit.label=缴纳保证金
+preppy.depositType.label=保证金缴纳方式
 preppy.address.label=详细住址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
@@ -353,8 +356,9 @@ preppy.town.label=乡镇(街道)
 preppy.hkbPath.label=户口本首页
 preppy.hkbksyPath.label=户口本考生页
 preppy.cardPhotoPath.label=身份证照片
-preppy.byzsPath.label=高中（中职）毕业证书
-preppy.xjzmPath.label=学籍证明
+preppy.byzsPath.label=高中/中专或初中毕业证书照片
+preppy.xjzmPath.label=高校录取通知书（若已被其它高校录取请上传）
+preppy.otherPhotoPath.label=手持身份证照片
 preppy.remark.label=备注
 preppy.counselor.label=辅导员
 preppy.counselorPhone.label=辅导员电话
@@ -383,12 +387,17 @@ medium.mediumPlan.label=中专科目组
 medium.plan.label=大学拟就读专业
 medium.teacher.label=推荐人
 medium.description.label=备注
-medium.voucherPath.label=凭证
+medium.voucherPath.label=预交费凭证
+medium.cardNoPath.label=身份证
+medium.admissionPath.label=准考证
+medium.agreementPath.label=协议
 medium.admission.label=录取
 medium.registration.label=报到
 medium.reviewStatus.label=审核
 medium.reviewPerson.label=审核人
 medium.reviewDate.label=审核日期
+medium.depositType.label=保证金缴纳方式
+medium.deposit.label=保证金金额
 
 #MediumPlan 中专科目组
 mediumPlan.label=中专科目组
@@ -428,7 +437,7 @@ workPlan.dateCreated.label=填表日期
 #mobile
 
 student.select.title=选择身份
-student.create.stu.type.title=选择类别
+student.create.stu.type.title=选择学生
 student.create.stu.title=创建学生
 student.create.high.title=创建高中生信息
 student.mobile.create.preppy.title=创建旁听生信息
