--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -322,7 +322,8 @@ preppy.csCode.label=审核编号
 preppy.name.label=姓名
 preppy.gender.label=性别
 preppy.number.label=身份证号
-preppy.type.label=考生类别
+preppy.type.label=应/往届
+preppy.leiBei.label=学生类别
 preppy.status.label=中学情况
 preppy.middlePlan.label=原就读专业
 preppy.plan.label=申请就读专业
@@ -352,6 +353,7 @@ preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
 preppy.school.label=学校
 preppy.town.label=乡镇(街道)
+preppy.beforeFamily.label=曾有/现有江苏学籍
 
 preppy.hkbPath.label=户口本首页
 preppy.hkbksyPath.label=户口本考生页
@@ -383,6 +385,7 @@ medium.gender.label=性别
 medium.number.label=身份证号
 medium.district.label=户籍地区
 medium.studentDistrict.label=学籍所在地
+medium.secondaryPlan.label=中专专业
 medium.mediumPlan.label=中专科目组
 medium.plan.label=大学拟就读专业
 medium.teacher.label=推荐人
