移动端的学生添加

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -204,10 +204,10 @@ student.level.label=学业水平测试等级
 student.artsScore.label=美术省统考成绩
 student.sportsScore.label=体育省统考成绩
 student.payment.label=预缴费
-student.payment.type.label=预缴费方式
+student.payment.type.label=保证金缴费方式
 student.payment.name.label=预缴费人
 student.payment.account.label=预缴费帐号
-student.payment.amount.label=预缴费金额
+student.payment.amount.label=保证金金额
 student.payment.date.label=预缴费日期
 student.payment.docPic.label=预缴费凭证图片
 student.payment.docDate.label=预缴费凭证日期
