编辑旁听生

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -444,6 +444,7 @@ student.create.stu.type.title=选择学生
 student.create.stu.title=创建学生
 student.create.high.title=创建高中生信息
 student.mobile.create.preppy.title=创建旁听生信息
+student.mobile.edit.preppy.title=编辑旁听生信息
 student.mobile.create.medium.title=创建中专生信息
 student.mobile.high.show.title=高中生信息创建成功
 student.mobile.preppy.show.title=旁听生信息创建成功
