普高生和中职生添加qq和手机

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -384,6 +384,8 @@ medium.code.label=考生号
 medium.gender.label=性别
 medium.number.label=身份证号
 medium.district.label=户籍地区
+medium.qq.label=QQ
+medium.phone.label=手机
 medium.studentDistrict.label=学籍所在地
 medium.secondaryPlan.label=中专专业
 medium.mediumPlan.label=中专科目组
