--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -453,6 +453,21 @@ student.mobile.preppy.show.title=旁听生信息创建成功
 student.mobile.medium.show.title=中专生信息创建成功
 student.mobile.preppy.stu.title=考生创建信息
 
+#录取
+admission.label=考生录取
+admission.idNo.label=身份证号
+admission.name.label=姓名
+admission.sex.label=性别
+admission.ksh.label=考生号
+admission.bkzy.label=报考专业
+admission.jtdz.label=家庭地址
+admission.lxdh.label=联系电话
+admission.kd.label=快递
+admission.kddh.label=快递单号
+admission.bz.label=备注
+admission.not.null.message=导入的数据不能为空
+admission.file.notNull.message=没有选择文件或文件格式不正确
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
