--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -84,6 +84,7 @@ default.count.label={0}数量
 
 default.button.confirm.label=确定
 default.button.search.label=搜索
+default.button.query.label=查询
 default.button.export.label=导出
 default.button.import.label=导入
 default.button.create.label=创建
@@ -455,6 +456,7 @@ student.mobile.preppy.stu.title=考生创建信息
 
 #录取
 admission.label=考生录取
+admission.query.label=考生录取查询
 admission.idNo.label=身份证号
 admission.name.label=姓名
 admission.sex.label=性别
