转升本意向

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -470,6 +470,7 @@ admission.bz.label=备注
 admission.not.null.message=导入的数据不能为空
 admission.file.notNull.message=没有选择文件或文件格式不正确
 
+topupStatus.label=是否有专接本意向
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
