--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -333,7 +333,14 @@ preppy.phone.label=学生手机
 preppy.qq.label=QQ
 preppy.resume.label=简历
 preppy.resume.junior.label=初中
+preppy.resume.juniorTime.label=初中时间
+preppy.resume.juniorSchoolName.label=初中学校名称
+preppy.resume.juniorAuth.label=初中证明人
 preppy.resume.high.label=高中
+preppy.resume.highTime.label=高中时间
+preppy.resume.highSchoolName.label=高中学校名称
+preppy.resume.highAuth.label=高中证明人
+preppy.resume.highZzzy.label=中职专业
 preppy.parentPhone.label=家长手机
 preppy.teacher.label=推荐人
 preppy.reviewStatus.label=审核
