旁听生修改

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -328,7 +328,7 @@ preppy.leiBei.label=学生类别
 preppy.status.label=中学情况
 preppy.middlePlan.label=原就读专业
 preppy.plan.label=申请就读专业
-preppy.family.label=户籍地
+preppy.family.label=户籍所在地
 preppy.phone.label=学生手机
 preppy.qq.label=QQ
 preppy.resume.label=简历
@@ -356,22 +356,32 @@ preppy.academicScore.label=学业水平测试成绩
 preppy.schoolType.label=学校类别
 preppy.deposit.label=缴纳保证金
 preppy.depositType.label=保证金缴纳方式
-preppy.address.label=详细住址
+preppy.address.label=详细地址
 preppy.studentCateories.label=考生类型
 preppy.xy.label=协议
-preppy.school.label=学校
+preppy.school.label=生源学校全称
 preppy.town.label=乡镇(街道)
 preppy.beforeFamily.label=曾有/现有江苏学籍
 
 preppy.hkbPath.label=户口本首页
 preppy.hkbksyPath.label=户口本考生页
-preppy.cardPhotoPath.label=身份证照片
+preppy.cardPhotoPath.label=身份证正面照片
+preppy.cardBackgroundPhotoPath.label=身份证反面照片
 preppy.byzsPath.label=高中/中专或初中毕业证书照片
 preppy.xjzmPath.label=高校录取通知书（若已被其它高校录取请上传）
 preppy.otherPhotoPath.label=手持身份证照片
 preppy.remark.label=备注
 preppy.counselor.label=辅导员
 preppy.counselorPhone.label=辅导员电话
+preppy.sendType.label=通知书发放形式
+preppy.receivePhone.label=收件人手机
+preppy.receiver.label=收件人
+preppy.payPhoto.label=预缴费照片
+preppy.exStatus.label=异动
+preppy.exDate.label=日期
+preppy.receiverFamily.label=通知书邮寄地址
+preppy.receiverAddress.label=地址
+preppy.familyType.label=户口性质
 
 
 #preppyPlan
